HW10 Preparing: Updating methods, switching to Java8, adding Json and Xml parsing, and beginning of DataStream