@@ -6,6 +6,7 @@ import ru.javawebinar.basejava.model.Resume;
 
 import java.util.List;
 import java.util.logging.Logger;
+import java.util.stream.Collectors;
 
 public abstract class AbstractStorage<SK> implements Storage {
 
@@ -39,7 +40,7 @@ public abstract class AbstractStorage<SK> implements Storage {
     public List<Resume> getAllSorted() {
         LOG.info("getAllSorted");
         List<Resume> resumeList = getAllElements();
-        return resumeList.stream().sorted().toList();
+        return resumeList.stream().sorted().collect(Collectors.toList());
     }
 
 
